tests/ui/primitive_input.stderr
error: durust handlers must take exactly one named input struct; wrap primitives, tuples, collections, and no-input handlers in a struct
 --> tests/ui/primitive_input.rs:2:21
  |
2 | async fn bad(input: u64) -> durust::Result<()> {
  |                     ^^^
